--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -14,8 +14,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/upload-pages-artifact@v1
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Upload site artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          path: ./
-      - uses: actions/deploy-pages@v1
+          path: './'
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
